# SoftRenderer

./: .gitignore  CMake-VS-15-2017-Win64.bat  CMakeLists.txt
Output/Win64/Binary/Debug/: SoftRendererPlayer.ilk
Source/Player/: CMakeLists.txt  DisplaySetting.h  InputManager.h  ScreenPoint.h  SoftRenderer.cpp  SoftRenderer.h  WindowsApp.cpp  WindowsPrecompiled.cpp  WindowsPrecompiled.h
Source/Player/Res/: resource.h
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Private/: Camera2D.cpp  GameObject2D.cpp  Texture.cpp  Transform2D.cpp
Source/Runtime/Engine/Public/: Camera2D.h  EngineHeaders.h  GameObject2D.h  Texture.h  Transform2D.h
Source/Runtime/Math/: CMakeLists.txt  Precompiled.h
Source/Runtime/Math/Private/: LinearColor.cpp  Math.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Vector3.cpp
Source/Runtime/Math/Public/: CoreDefinition.h  LinearColor.h  MathHeaders.h  MathUtil.h  Matrix2x2.h  Matrix3x3.h  Vector2.h  Vector3.h
Source/Runtime/Renderer/: CMakeLists.txt  Precompiled.h
Source/Runtime/Renderer/Private/: TriangleRasterizer.cpp  WindowsGDI.cpp  WindowsRSI.cpp
Source/Runtime/Renderer/Public/: DisplaySetting.h  RenderingSoftwareInterface.h  ScreenPoint.h  TriangleRasterizer.h  VertexData.h  WindowsGDI.h  WindowsRSI.h
